# cmd/ambulance-api-service/main.go
@@ -7,6 +7,10 @@ import (
     "github.com/gin-gonic/gin"
     "github.com/jkloris/ambulance-webapi/api"
 	"github.com/jkloris/ambulance-webapi/internal/ambulance_wl"
+    "github.com/jkloris/ambulance-webapi/internal/db_service"
+    "context"
+    "time"
+    "github.com/gin-contrib/cors"
 )
 
 func main() {
@@ -21,6 +25,22 @@ func main() {
     }
     engine := gin.New()
     engine.Use(gin.Recovery())
+    corsMiddleware := cors.New(cors.Config{
+        AllowOrigins:     []string{"*"},
+        AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+        AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+        ExposeHeaders:    []string{""},
+        AllowCredentials: false,
+        MaxAge: 12 * time.Hour,
+    })
+    engine.Use(corsMiddleware)
+        // setup context update  middleware
+        dbService := db_service.NewMongoService[ambulance_wl.Ambulance](db_service.MongoServiceConfig{})
+        defer dbService.Disconnect(context.Background())
+        engine.Use(func(ctx *gin.Context) {
+            ctx.Set("db_service", dbService)
+            ctx.Next()
+        })
     // request routings
 	ambulance_wl.AddRoutes(engine)
     engine.GET("/openapi", api.HandleOpenApi)
